# app-trace

./: .gitignore  CITATION.cff  README.md  pyproject.toml  requirements.txt
tracengine/: cli.py
tracengine/annotate/: __init__.py  base.py  registry.py
tracengine/annotate/builtins/: interval.py  peak.py  threshold.py
tracengine/annotate/manual/: __init__.py  interval.py  timepoint.py
tracengine/compute/: __init__.py  base.py  registry.py
tracengine/compute/builtins/: summary_stats.py
tracengine/data/: descriptors.py  loader.py  resolve.py
tracengine/engine/: __init__.py  export.py  provenance.py  runner.py
tracengine/gui/: main_window.py  plot_window.py
tracengine/processing/: __init__.py  base.py  channel_utils.py  registry.py
tracengine/project/: __init__.py  config.py  structure.py
tracengine/registry/: __init__.py  base.py  discovery.py
tracengine/templates/: develop_annotator.ipynb  develop_compute.ipynb
tracengine/utils/: signal_processing.py
tracetool/: cli.py
tracetool/annotate/: __init__.py  base.py  registry.py
tracetool/compute/: __init__.py  base.py  registry.py
tracetool/data/: descriptors.py  loader.py  resolve.py
tracetool/engine/: __init__.py  export.py  provenance.py  runner.py  steps.py
tracetool/gui/: main_window.py  plot_window.py
tracetool/processing/: channel_utils.py  filters.py
tracetool/project/: __init__.py  config.py  structure.py
tracetool/registry/: __init__.py  base.py  discovery.py
tracetool/templates/: develop_annotator.ipynb  develop_compute.ipynb
tracetool/utils/: signal_processing.py
(+25 files in other folders)
