[project]
name = "tracengine"
version = "0.1.0"
description = "Time-series Representation and Annotation for Computational Experiments"
authors = [{name="Abdullah Zafar", email="abdullah.zafar@umontreal.ca"}]
license = { text="BSD-3-Clause" }
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
]

[project.scripts]
tracengine = "tracengine.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]